# xp-apps-tui

./: .gitignore  CMakeLists.txt  build.sh
examples/: state_saving_demo.cpp  system_info.cpp  test_tui.cpp  theme_customizing.cpp
include/rebuildTUI/: navigation_tui.hpp  rebuildtui.hpp  section.hpp  section_builder.hpp  selectable_item.hpp  styles.hpp  terminal_utils.hpp
include/rebuildTUI/core/: input.hpp  terminal.hpp
include/rebuildTUI/styles/: colors.hpp  gradient.hpp  text.hpp
include/rebuildTUI/theme/: colors.hpp  gradient.hpp  text.hpp
include/rebuildTUI/ui/: section.hpp  section_builder.hpp
src/: navigation_tui.cpp  rebuildtui.cpp  styles.cpp  terminal_utils.cpp
src/core/: input.cpp  terminal.cpp
src/styles/: gradient.cpp
src/theme/: gradient.cpp
